mock知识库
